--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@rollup/plugin-node-resolve": "^15.0.0",
         "rollup-plugin-hot": "^0.1.1"
     }
 }
