--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 # System and IDE files
 Thumbs.db
 .DS_Store
-.idea
-*.suo
-*.sublime-project
-*.sublime-workspace
-dist
+.vscode
+
 
 # Vendors
 node_modules/
 
 # Build
-/npm-debug.log
+dist
