--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
-    "name": "phaser3-typescript-project-template",
-    "version": "1.0.2",
-    "description": "A Phaser 3 Project Template using Rollup and TypeScript",
-    "main": "src/game.ts",
-    "scripts": {
-        "dev": "rollup --config rollup.config.dev.js",
-        "build": "rollup --config rollup.config.dist.js",
-        "watch": "rollup --watch --config rollup.config.dev.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/photonstorm/phaser3-typescript-project-template.git"
-    },
-    "author": "Richard Davey <rich@photonstorm.com> (http://www.photonstorm.com)",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/photonstorm/phaser3-typescript-project-template/issues"
-    },
-    "homepage": "https://github.com/photonstorm/phaser3-typescript-project-template#readme",
-    "devDependencies": {
-        "@rollup/plugin-replace": "^2.3.4",
-        "phaser": "^3.50.0",
-        "prettier": "2.7.1",
-        "rollup": "^2.35.1",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-serve": "^1.1.0",
-        "rollup-plugin-typescript2": "^0.29.0",
-        "typescript": "^4.1.3"
-    },
-    "dependencies": {
-        "@rollup/plugin-node-resolve": "^15.0.0",
-        "rollup-plugin-hot": "^0.1.1"
-    }
+  "name": "phaser3-rollup-typescript",
+  "version": "1.1.0",
+  "description": "Phaser 3 TypeScript Starter",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/geocine/phaser3-rollup-typescript.git"
+  },
+  "author": "Aivan Monceller",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/geocine/phaser3-rollup-typescript/issues"
+  },
+  "homepage": "https://github.com/geocine/phaser3-rollup-typescript#readme",
+  "devDependencies": {
+    "@types/node": "^17.0.31",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "phaser": "^3.55.2",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.13"
+  }
 }
